--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,21 @@
-asttokens
-backcall
-backports
-backports.functools_lru_cache
-blosc
-ca-certificates
-catboost
-colorama
-comm
-configparser
-contourpy
-cycler
-debugpy
-decorator
-dill
-dnspython
-executing
-fonttools
-imbalanced-learn
-imblearn
-importlib-metadata
-importlib-resources
-importlib_metadata
-ipykernel
-ipython
-jedi
-joblib
-jupyter_client
-jupyter_core
-kiwisolver
-libffi
-libsodium
-lightgbm
-matplotlib
-matplotlib-inline
-miceforest
-nest-asyncio
-numpy
-openssl
-packaging
+dill==0.3.5.1
+dnspython==2.2.1
+fastapi==0.78.0
+httptools==0.5.0
+imblearn==0.0
+mypy-boto3-s3==1.24.76
+pip-chill==1.0.1
+pymongo==4.2.0
+python-dotenv==0.21.0
+types-s3transfer==0.6.0.post4
+uvicorn==0.18.3
+watchfiles==0.17.0
+websockets==10.3
+wincertstore==0.2
+xgboost==1.6.2
 pandas
-parso
-pickleshare
-pillow
-pip
-platformdirs
-plotly
-prompt-toolkit
-prompt_toolkit
-psutil
-pure_eval
-pygments
-pymongo
-pyparsing
-python
-python-dateutil
-python-dotenv
-python-graphviz
-python_abi
-pytz
-pywin32
-pyzmq
+PyYAML
+numpy
 scikit-learn
-scipy
-seaborn
-setuptools
-six
-sqlite
-stack_data
-tenacity
-threadpoolctl
-tornado
-traitlets
-typing-extensions
-typing_extensions
-tzdata
-vc
-vs2015_runtime
-wcwidth
-wheel
-xgboost
-zeromq
-zipp
-Bottleneck
-joblib
-mkl-fft
-mkl-random 
-mkl-service
-numexpr 
-numpy 
-pandas 
-pymongo
-python-dateutil
-python-dotenv
-pytz
-scikit-learn 
-scipy
-six 
-threadpoolctl 
-tzdata 
+apache-airflow
+-e .
